--- a/style.css
+++ b/style.css
@@ -11,35 +11,32 @@ h1{
     margin: 30px;
     color: azure;
     font-family: "Bungee Shade", sans-serif;
-    font-size: 48px;
+    font-size: 68px;
     text-align: center;
 }
 .nav1{
     text-align: center;
+    margin-top: 70px;
+    
     
 }
 
-.div{
-    text-decoration: none;
-    display: inline;
-    margin: 5px;
-    
-    
-
-}
-.di{
+.a1{
+    font-size: 20px;
     background-color: azure;
     color: rgb(221, 67, 149);
     text-decoration: none;
     border-radius: 20px;
     border: 2px solid rgb(221, 67, 149);
-    padding: 10px; 
+    padding: 20px;
+    margin-left: 30px;
+    
+   
 }
-
 p{
     margin-top: 200px;
-    margin-bottom: 500px;
-    font-size: 48px;
+    margin-bottom: 300px;
+    font-size: 60px;
     text-align: center;
     color: azure;
     font-family:"Rampart One", sans-serif; 
@@ -81,7 +78,7 @@ img:hover{
 }
 .par{
     display: inline;
-    font-size: 20px;
+    font-size: 30px;
     margin: 10px;
     color: azure;
     font-family: 'Times New Roman', Times, serif;
@@ -96,4 +93,56 @@ img:hover{
 
 .fa-brands:hover,.par:hover{
     color: black;
+}
+.contact{
+    font-size: 30px;
+}
+
+.msg{
+    text-decoration: none;
+    font-size: 30px;
+    color: rgb(221, 67, 149) ;
+}
+
+#in1, #in2{
+    font-size: 20px;
+    margin-left: 300px;
+    width: 600px;
+    height: 60px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    color: grey;
+    border: 4px solid rgb(221, 67, 149);
+    
+
+}
+
+#in3{
+   
+    font-size: 20px;
+    margin-left: 300px;
+    width: 600px;
+    height: 170px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    color: grey;
+    border: 4px solid rgb(221, 67, 149);
+    
+
+}
+
+button{
+    font-size: 30px;
+    margin-left: 300px;
+    width: 600px;
+    height: 60px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: none;
+    color: azure;
+    background-color: rgb(221, 67, 149);
+
 }
